# RobotControlApps

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MinimalApp.xml  README.md  sbom_policies.yml
.github/workflows/: CMakePresets_Windows.json  build-cpp-linux.yml  build-cpp-windows.yml  package-python.yml  sbom-python-apps.yml  sbom-python.yml  sbom_enrichment_db.json  sbom_policies.yml  test-python-apps.yml  test-python.yml
DockerCrossEnv/: .gitignore  Dockerfile  Dockerfile_Image  Dockerfile_Prebuilt  README.md  toolchain-raspberrypi.cmake
DockerCrossEnv/dependencies/: 01_system_fixes.sh  01_zlib.sh  02_openssl.sh  06_protobuf.sh  07_grpc.sh  08_opencv.sh  20_openssl_rpi.sh  60_protobuf_native.sh  60_protobuf_rpi.sh  70_grpc_native.sh  70_grpc_rpi.sh  80_opencv_rpi.sh
MathTools/: AppClient.py  MathToolsApp.py  README.md  app.py  package.sh  pyproject.toml  rcapp.xml  robotcontrolapp_pb2_grpc.py  sbomify.json  ui.xml
MathTools/DataTypes/: ProgramVariable.py  RobotState.py  SystemInfo.py
MathTools/protos/: robotcontrolapp.proto
MathTools/src/: app.py
MathTools/src/math_tools_app/: MathToolsApp.py
MathTools/tests/: test_AppClient.py
MathTools/tests/DataTypes/: test_DirectoryContent.py  test_LicenseInfo.py  test_Matrix44.py  test_NumberVariable.py  test_RobotState.py  test_SystemInfo.py
PositionLogger/: .flake8  AppClient.py  PositionLogger.py  README.md  app.py  package.sh  pyproject.toml  rcapp.xml  robotcontrolapp_pb2.py  robotcontrolapp_pb2_grpc.py  ui.xml
PositionLogger/DataTypes/: DirectoryContent.py  Matrix44.py  ProgramVariable.py  Statistics.py  SystemInfo.py
PositionLogger/protos/: robotcontrolapp.proto
PositionLogger/src/: app.py
PositionLogger/src/irc_app/: AppClient.py
PositionLogger/src/irc_app/DataTypes/: DirectoryContent.py  RobotState.py  SystemInfo.py
PositionLogger/src/irc_app/rpc/: robotcontrolapp_pb2.py
PositionLogger/src/position_logger/: PositionLogger.py
PositionLogger/tests/: README.md  test_AppClient.py
PositionLogger/tests/DataTypes/: test_Matrix44.py  test_MotionState.py  test_NumberVariable.py  test_PositionVariable.py  test_RobotState.py  test_Statistics.py  test_SystemInfo.py
control_cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SampleProgram.xml  conanfile.py  rcapp.xml  sbomify.json.in  ui.xml  vcpkg.json
control_cpp/src/: AppClient.cpp  AppClient.h  ControlApp.cpp  ControlApp.h  main.cpp
control_cpp/src/DataTypes/: Matrix44.h  MotionState.cpp  MotionState.h  RobotState.h
control_cpp/tests/DataTypes/: Matrix44Test.cpp  NumberVariableTest.cpp  SystemInfoTest.cpp
control_python/: .gitignore  AppClient.py  ControlApp.py  README.md  app.py  package.sh  pyproject.toml  rcapp.xml  requirements.txt  robotcontrolapp_pb2.py  sbomify.json  ui.xml
control_python/DataTypes/: Matrix44.py  MotionState.py  RobotState.py  Statistics.py
control_python/src/: app.py
control_python/src/control_app/: ControlApp.py
control_python/tests/DataTypes/: test_DirectoryContent.py  test_MotionState.py  test_RobotState.py  test_Statistics.py  test_SystemInfo.py
documentation/: Commandline arguments.md  Packaging.md  Program functions.md  README.md  rcapp.xml.md  ui.xml.md
minimal_cpp/: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  conan_install_linux_all.sh  conan_install_linux_native.sh  rcapp.xml  sbom_minimal_app_cpp.cdx.json  sbom_minimal_app_cpp2.cdx.json  ui.xml  vcpkg.json
minimal_cpp/cmake/: gRPC.cmake
minimal_cpp/protos/: robotcontrolapp.proto
minimal_cpp/src/: AppClient.cpp  AppClient.h  MinimalApp.cpp  MinimalApp.h  main.cpp
minimal_cpp/src/DataTypes/: LicenseDetails.cpp  Matrix44.cpp  MotionState.cpp  MotionState.h  ProgramVariable.h  RobotState.h  Statistics.h  SystemInfo.cpp  SystemInfo.h
minimal_cpp/tests/DataTypes/: LicenseInfoTest.cpp  MotionStateTest.cpp  RobotStateTest.cpp  StatisticsTest.cpp
minimal_python/: .flake8  AppClient.py  MinimalApp.py  README.md  app.py  package.sh  pyproject.toml  rcapp.xml  robotcontrolapp_pb2.py  robotcontrolapp_pb2.pyi  robotcontrolapp_pb2_grpc.py  update_grpc_definitions.sh
minimal_python/DataTypes/: LicenseInfo.py  Matrix44.py  MotionState.py  ProgramVariable.py  RobotState.py  SystemInfo.py
minimal_python/protos/: robotcontrolapp.proto
minimal_python/src/: app.py
minimal_python/src/irc_app/DataTypes/: LicenseInfo.py  ProgramVariable.py  Statistics.py
minimal_python/src/irc_app/rpc/: robotcontrolapp_pb2_grpc.py
minimal_python/src/minimal_app/: MinimalApp.py
minimal_python/tests/DataTypes/: test_LicenseInfo.py  test_RobotState.py  test_Statistics.py
monitor_cpp/: .gitignore  CMakeLists.txt  Dockerfile  README.md  conan_install_linux_rpi.sh  conan_install_windows.ps1  conanfile.py  rcapp.xml  ui.xml  vcpkg.json
monitor_cpp/cmake/: gRPC.cmake
monitor_cpp/protos/: robotcontrolapp.proto
monitor_cpp/src/: AppClient.cpp  AppClient.h  MonitorApp.cpp  MonitorApp.h  main.cpp
monitor_cpp/src/DataTypes/: LicenseDetails.h  MathDefinitions.h  Matrix44.cpp  ProgramVariable.h  RobotState.cpp  RobotState.h  Statistics.cpp  SystemInfo.cpp  SystemInfo.h
monitor_cpp/tests/DataTypes/: LicenseInfoTest.cpp  MotionStateTest.cpp  (+4 more)
monitor_python/: AppClient.py  MonitorApp.py  README.md  app.py  package.sh  pyproject.toml  rcapp.xml  robotcontrolapp_pb2.pyi  ui.xml
monitor_python/DataTypes/: LicenseInfo.py  Matrix44.py  MotionState.py  ProgramVariable.py  RobotState.py
monitor_python/src/: app.py
monitor_python/src/irc_app/DataTypes/: Matrix44.py  MotionState.py
monitor_python/src/irc_app/rpc/: robotcontrolapp_pb2.pyi
monitor_python/src/monitor_app/: MonitorApp.py
monitor_python/tests/: test_AppClient.py
monitor_python/tests/DataTypes/: test_Matrix44.py  test_MotionState.py  test_PositionVariable.py  test_RobotState.py  test_SystemInfo.py
opcua_server_python/: OpcUaServer.py  README.md  app.py  rcapp.xml  requirements.txt  robotcontrolapp_pb2.pyi  robotcontrolapp_pb2_grpc.py
opcua_server_python/DataTypes/: MathDefinitions.py
