[project]
name = "MinimalApp Python"
dynamic = ["version", "dependencies"]
description = "Extends the robot control programs by math related commands"
readme = "README.md"
requires-python = ">=3.9.2"
authors = [
    { name = "MAB", email = "support@cpr-robots.com" },
]
license = "MIT"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
