[project]
name = "MinimalApp Python"
dynamic = ["version", "dependencies"]
description = "Logs positions to a CSV file when triggered via the robot program"
readme = "README.md"
requires-python = ">=3.9.2"
authors = [
    { name = "MAB", email = "support@cpr-robots.com" },
]
license = "MIT"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"
