[project]
name = "position_logger"
version = "14.6.7"
description = "Position logger app for the igus Robot Control"
authors = [
    {name = "MAB",email = "support@commonplacerobotics.de"}
]
readme = "README.md"
requires-python = ">=3.9.2,<3.10"
license = "MIT"
dependencies = [
	"grpcio (==1.64.1)",
]

[dependency-groups]
dev = [
    "grpcio-tools (==1.64.1)"
]
test = [
    "pytest (>=8.0.0,<9.0.0)",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry]
packages = [{include = "position_logger", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
