[project]
name = "minimal_app"
version = "14.6.7"
description = "Minimal robot control app example"
authors = [
    {name = "MAB",email = "support@commonplacerobotics.de"}
]
readme = "README.md"
requires-python = "==3.9.2"
license = "MIT"
dependencies = [
	"cython (>=0.29.8,<3.0.0rc1)",
	"grpcio (==1.64.1)",
	"grpcio-tools (==1.64.1)",
]

[dependency-groups]
test = [
    "pytest (>=8.0.0,<9.0.0)",
]

[tool.poetry]
packages = [{include = "minimal_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"